--- a/index.html
+++ b/index.html
@@ -1139,10 +1139,24 @@
 </tr>
 
 <tr>
+<td>Abadazad</td>
+<td>2004</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abandoned Cars</td>
 <td>2008</td>
 <td>Fantagraphics</td>
 <td><a href="AbandonedCars/AbandonedCars.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Abandon The Old In Tokyo</td>
+<td>2006</td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1167,6 +1181,13 @@
 </tr>
 
 <tr>
+<td>Abbott</td>
+<td>2018</td>
+<td>Boom!</td>
+<td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
 <td>ABC</td>
 <td>1943</td>
 <td>Publisher</td>
@@ -1178,20 +1199,6 @@
 <td>2006</td>
 <td>America's Best</td>
 <td><a href="AmericasBest/AmericasBest.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Abandon The Old In Tokyo</td>
-<td>2006</td>
-<td>Drawn &amp; Quarterly</td>
-<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Abbott</td>
-<td>2018</td>
-<td>Boom!</td>
-<td><a href="Boom!/Boom!.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4934,6 +4941,13 @@
 </tr>
 
 <tr>
+<td>Arch Enemies</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="ArchEnemies/ArchEnemies.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Archangel</td>
 <td>1996</td>
 <td>Marvel</td>
@@ -4941,10 +4955,10 @@
 </tr>
 
 <tr>
-<td>Arch Enemies</td>
-<td>2006</td>
-<td>Dark Horse</td>
-<td><a href="ArchEnemies/ArchEnemies.html">Details</a></td>
+<td>Archard's Agents</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9782,6 +9796,13 @@
 </tr>
 
 <tr>
+<td>Brath</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brats Bizarre</td>
 <td>1994</td>
 <td>Epic</td>
@@ -9891,6 +9912,20 @@
 <td>1967</td>
 <td>Creator</td>
 <td><a href="BrianMichaelBendis/BrianMichaelBendis.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brian Pulido's Lady Death: A Medieval Tale</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brian Pulido's Lady Death: The Wild Hunt</td>
+<td>2004</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11581,6 +11616,27 @@
 </tr>
 
 <tr>
+<td>Cazador</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cazador Collected Edition</td>
+<td>2004</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cazador: The Bloody Ballad Blackjack Tom</td>
+<td>2004</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>CBGB</td>
 <td>2010</td>
 <td>Boom!</td>
@@ -12200,6 +12256,13 @@
 <td>1996</td>
 <td>5th Panel</td>
 <td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chimera</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14364,6 +14427,27 @@
 </tr>
 
 <tr>
+<td>CrossGen Chronicles</td>
+<td>2000</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crossgenesis</td>
+<td>2000</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crossovers</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crossroads</td>
 <td>1988</td>
 <td>First Comics</td>
@@ -14459,6 +14543,13 @@
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="CrushDH/CrushDH.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crux</td>
+<td>2001</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17942,6 +18033,13 @@
 </tr>
 
 <tr>
+<td>Dragon's Lair</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dragons In The Moon</td>
 <td>1990</td>
 <td>Aircel</td>
@@ -18723,6 +18821,13 @@
 <td>1994</td>
 <td>Malibu</td>
 <td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edge</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20987,6 +21092,13 @@
 </tr>
 
 <tr>
+<td>First</td>
+<td>2000</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>First Adventures</td>
 <td>1985</td>
 <td>First Comics</td>
@@ -21501,6 +21613,13 @@
 <td>1971</td>
 <td>DC</td>
 <td><a href="ForeverPeople/ForeverPeople.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Forge</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28322,6 +28441,13 @@
 </tr>
 
 <tr>
+<td>John Carpenter's Snake Plissken Chronicles</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>John Carter, Warlord Of Mars</td>
 <td>1977</td>
 <td>Marvel</td>
@@ -29705,6 +29831,13 @@
 <td>2016</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kiss Kiss Bang Bang</td>
+<td>2004</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32719,6 +32852,13 @@
 </tr>
 
 <tr>
+<td>Mark Of Charon</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Market Day</td>
 <td>2013</td>
 <td>Drawn &amp; Quarterly</td>
@@ -33433,6 +33573,41 @@
 </tr>
 
 <tr>
+<td>Masters Of The Universe, Icons Of Evil: Mer-Man</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Masters Of The Universe, Icons Of Evil: Trapjaw</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Masters Of The Universe, Icons Of Evil: Tri-Klops</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Masters Of The Universe: Dream Halloween</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Masters Of The Universe: Rise Of The Snake Men</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mata Hari</td>
 <td>2018</td>
 <td>Dark Horse</td>
@@ -33877,6 +34052,20 @@
 <td>2014</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Meridian</td>
+<td>2000</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Meridian Traveler Edition: Flying Solo</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35875,6 +36064,13 @@
 </tr>
 
 <tr>
+<td>Mystic</td>
+<td>2000</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mystic Comics</td>
 <td>1940</td>
 <td>Atlas</td>
@@ -36194,6 +36390,27 @@
 <td>1936</td>
 <td>Publisher</td>
 <td><a href="Pines/Pines.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Negation</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Negation War</td>
+<td>2004</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Negation: Lawbringer</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38182,6 +38399,13 @@
 <td>1963</td>
 <td>Marvel</td>
 <td><a href="PastePotPete/PastePotPete.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Path</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40246,7 +40470,21 @@
 </tr>
 
 <tr>
-<td><a name="r">R.I.P.D.</a></td>
+<td><a name="r">R.A. Salvatore's DemonWars: Eye For An Eye</a></td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>R.A. Salvatore's DemonWars: Trial By Fire</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>R.I.P.D.</td>
 <td>1999</td>
 <td>Dark Horse</td>
 <td><a href="RIPD/RIPD.html">Details</a></td>
@@ -40844,6 +41082,13 @@
 <td>2010</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Red Star</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41588,6 +41833,13 @@
 </tr>
 
 <tr>
+<td>Rob Zombie's Spookshow International</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Robert Anton Wilson</td>
 <td>1932</td>
 <td>Creator</td>
@@ -42154,6 +42406,13 @@
 </tr>
 
 <tr>
+<td>Route 666</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rowans Ruin</td>
 <td>2015</td>
 <td>Boom!</td>
@@ -42270,6 +42529,20 @@
 <td>1944</td>
 <td>Publisher</td>
 <td><a href="RuralHome/RuralHome.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ruse</td>
+<td>2001</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ruse Traveler Edition</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42685,6 +42958,13 @@
 </tr>
 
 <tr>
+<td>Saurians: Unnatural Selection</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Savage Brothers</td>
 <td>2006</td>
 <td>Boom!</td>
@@ -42905,6 +43185,20 @@
 <td>1992</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scion</td>
+<td>2000</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scion Traveler Edition</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44203,6 +44497,13 @@
 </tr>
 
 <tr>
+<td>Sigil</td>
+<td>2000</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Silent Hill: Among The Damned</td>
 <td>2004</td>
 <td>IDW</td>
@@ -44228,6 +44529,13 @@
 <td>2001</td>
 <td>Dark Horse</td>
 <td><a href="Silke/Silke.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Silken Ghost</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44903,6 +45211,13 @@
 </tr>
 
 <tr>
+<td>Sojourn</td>
+<td>2001</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Solar: Man Of The Atom</td>
 <td>2014</td>
 <td>Dynamite</td>
@@ -44949,6 +45264,13 @@
 <td>1985</td>
 <td>Marvel</td>
 <td><a href="SolomonKane/SolomonKane.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Solus</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45117,6 +45439,13 @@
 <td>2008</td>
 <td>Secret Acres</td>
 <td><a href="SecretAcres/SecretAcres.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space Ace</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47609,6 +47938,13 @@
 <td>1990</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales Of The Realm</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50426,6 +50762,13 @@
 </tr>
 
 <tr>
+<td>Vector</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Veil</td>
 <td>2009</td>
 <td>IDW</td>
@@ -51452,6 +51795,20 @@
 <td>2004</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Way Of The Rat</td>
+<td>2002</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Way Of The Rat FCBD</td>
+<td>2003</td>
+<td>CrossGen</td>
+<td><a href="CrossGen/CrossGen.html">Details</a></td>
 </tr>
 
 <tr>
