--- a/index.html
+++ b/index.html
@@ -912,6 +912,41 @@
 </tr>
 
 <tr>
+<td>4001 A.D.</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>4001 A.D.: Bloodshot</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>4001 A.D.: Shadowman</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>4001 A.D.: War Mother</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>4001 A.D.: X-O Manowar</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>5000 Km Per Second</td>
 <td>2016</td>
 <td>Fantagraphics</td>
@@ -4962,6 +4997,13 @@
 </tr>
 
 <tr>
+<td>Archer And Armstrong</td>
+<td>2012</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Archie</td>
 <td>1942</td>
 <td>Archie</td>
@@ -5085,6 +5127,13 @@
 <td>1987</td>
 <td>AC Comics</td>
 <td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Armor Hunters</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9097,6 +9146,55 @@
 </tr>
 
 <tr>
+<td>Bloodshot</td>
+<td>2012</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodshot Reborn</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodshot Rising Spirit</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodshot Salvation</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodshot U.S.A.</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodshot's Day Off</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodshot: Definitive Edition</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bloodstone</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -9464,6 +9562,48 @@
 <td>1944</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Death</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Death: Legends Of The Geomancer</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Death: The Fall Of Bloodshot</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Death: The Fall Of Harbinger</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Death: The Fall Of Ninjack</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book Of Death: The Fall Of X-O Manowar</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10038,6 +10178,27 @@
 <td>2003</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Britannia</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Britannia: Lost Eagles Of Rome</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Britannia: We Who Are About To Die</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15933,6 +16094,13 @@
 </tr>
 
 <tr>
+<td>Dead Drop</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dead Eyes</td>
 <td>2019</td>
 <td>Image</td>
@@ -16297,10 +16465,31 @@
 </tr>
 
 <tr>
-<td>Death-Defying 'Devil</td>
+<td>Death-Defying Devil</td>
 <td>2008</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Death-Defying Doctor Mirage</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Death-Defying Doctor Mirage Plus Edition</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Death-Defying Doctor Mirage: Second Lives</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16504,6 +16693,13 @@
 <td>2016</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Delinquents</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17151,6 +17347,69 @@
 </tr>
 
 <tr>
+<td>Divinity</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity II</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity III: Aric, Son Of The Revolution</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity III: Escape From Gulag 396</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity III: Heroes Of The Glorious Stalinverse</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity III: Komandar Bloodshot</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity III: Shadowman &amp; The Battle For New Stalingrad</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity III: Stalinverse</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Divinity One Dollar Debut</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Division 13</td>
 <td>1994</td>
 <td>Dark Horse</td>
@@ -17298,6 +17557,13 @@
 </tr>
 
 <tr>
+<td>Doctor Mirage</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Doctor Solar</td>
 <td>1962</td>
 <td>Gold Key</td>
@@ -17358,6 +17624,13 @@
 <td>1997</td>
 <td>Marvel</td>
 <td><a href="DoctorStrangeWhatDisturbsYou/DoctorStrangeWhatDisturbsYou.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Doctor Tomorrow</td>
+<td>2020</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19545,6 +19818,34 @@
 </tr>
 
 <tr>
+<td>Eternal Warrior</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eternal Warrior/Bloodshot And H.A.R.D. Corps Flip Sketchbook</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eternal Warrior: Awakening</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eternal Warrior: Days Of Steel</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eternals</td>
 <td>1976</td>
 <td>Marvel</td>
@@ -19556,6 +19857,13 @@
 <td>1957</td>
 <td>Creator</td>
 <td><a href="Eternaut/Eternaut.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eternity</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20070,6 +20378,20 @@
 </tr>
 
 <tr>
+<td>Faith</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Faith And the Future Force</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Faithful Spy</td>
 <td>2018</td>
 <td>Abrams</td>
@@ -20151,6 +20473,13 @@
 <td>2012</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fallen World</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20585,6 +20914,27 @@
 <td>2013</td>
 <td>Vertigo</td>
 <td><a href="FBP/FBP.html">Details</a></td>
+</tr>
+
+<tr>
+<td>FCBD Armor Hunters</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>FCBD Valiant Universe Handbook</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>FCBD Valiant 25th Anniversary Special</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21627,6 +21977,13 @@
 <td>1988</td>
 <td>First Comics</td>
 <td><a href="FirstComics/FirstComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Forgotten Queen</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22852,6 +23209,13 @@
 <td>1994</td>
 <td>Marvel</td>
 <td><a href="GenerationX/GenerationX.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Generation Zero</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24919,6 +25283,97 @@
 </tr>
 
 <tr>
+<td>Harbinger</td>
+<td>2012</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Bleeding Monk</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Deluxe Edition</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Faith</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Renegade</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Wars</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Wars 2</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Wars 2 Aftermath</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Wars 2 Prelude</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Wars Compendium</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger Wars Sketchbook</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger: Omegas</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Harbinger: The Beginning</td>
+<td>2007</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Harcourt Legacy</td>
 <td>2017</td>
 <td>Action Lab</td>
@@ -26873,6 +27328,13 @@
 </tr>
 
 <tr>
+<td>Imperium</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Impossible Incorporated</td>
 <td>2018</td>
 <td>IDW</td>
@@ -26954,6 +27416,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Incursion</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27563,6 +28032,13 @@
 <td>2004</td>
 <td>About Comics</td>
 <td><a href="AboutComics/AboutComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ivar, Timewalker</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29477,6 +29953,13 @@
 </tr>
 
 <tr>
+<td>Killers</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Killing And Dying</td>
 <td>2015</td>
 <td>Drawn &amp; Quarterly</td>
@@ -31063,6 +31546,13 @@
 <td>1991</td>
 <td>Epic</td>
 <td><a href="LieutenantBlueberry/LieutenantBlueberry.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Life And Death Of Toyo Harada</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35664,6 +36154,13 @@
 </tr>
 
 <tr>
+<td>Must Read Valiant: Greatest Hits</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mutant Misadventures Of Cloak And Dagger</td>
 <td>1983</td>
 <td>Marvel</td>
@@ -37069,6 +37566,20 @@
 <td>2007</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ninja-K</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ninjak</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40204,6 +40715,13 @@
 </tr>
 
 <tr>
+<td>Psi-Lords</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Psycho</td>
 <td>1971</td>
 <td>Skywald</td>
@@ -40351,6 +40869,13 @@
 </tr>
 
 <tr>
+<td>Punk Mambo</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Punk Rock Jesus</td>
 <td>2012</td>
 <td>Vertigo</td>
@@ -40400,7 +40925,14 @@
 </tr>
 
 <tr>
-<td><a name="q">Quadralien</a></td>
+<td><a name="q">Q2: The Return Of Quantum And Woody</a></td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quadralien</td>
 <td>1988</td>
 <td>Logotron</td>
 <td><a href="Quadralien/Quadralien.html">Details</a></td>
@@ -40411,6 +40943,27 @@
 <td>1937</td>
 <td>Publisher</td>
 <td><a href="QualityComics/QualityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quantum And Woody</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quantum And Woody Must Die!</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quantum And Woody Valiant-Sized</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40596,6 +41149,20 @@
 </tr>
 
 <tr>
+<td>Rai</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rai: The History Of The Valiant Universe</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Raiders Of The Lost Ark</td>
 <td>1981</td>
 <td>Paramount</td>
@@ -40659,6 +41226,13 @@
 </tr>
 
 <tr>
+<td>Rampage Redux</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rampaging Hulk</td>
 <td>1977</td>
 <td>Marvel</td>
@@ -40698,6 +41272,13 @@
 <td>1483</td>
 <td>Creator</td>
 <td><a href="Raphael/Raphael.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rapture</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42183,6 +42764,13 @@
 </tr>
 
 <tr>
+<td>Roku</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rolf Armstrong</td>
 <td>1889</td>
 <td>Creator</td>
@@ -42965,6 +43553,13 @@
 </tr>
 
 <tr>
+<td>Savage</td>
+<td>2016</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Savage Brothers</td>
 <td>2006</td>
 <td>Boom!</td>
@@ -43650,6 +44245,20 @@
 </tr>
 
 <tr>
+<td>Secret Weapons</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Secret Weapons: Owen's Story</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Secretum Secretorum</td>
 <td>1995</td>
 <td>Twilight Twins</td>
@@ -44025,6 +44634,27 @@
 <td>1990</td>
 <td>Epic</td>
 <td><a href="ShadowlineSaga/ShadowlineSaga.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shadowman</td>
+<td>2012</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shadowman / Rae Sremmurd</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Shadowman: End Times</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47304,6 +47934,13 @@
 </tr>
 
 <tr>
+<td>Summer Of Valiant</td>
+<td>2012</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sun</td>
 <td>1952</td>
 <td>Amalgamated</td>
@@ -50265,6 +50902,13 @@
 </tr>
 
 <tr>
+<td>Unity</td>
+<td>2013</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Universal Press Syndicate</td>
 <td>1970</td>
 <td>Publisher</td>
@@ -50559,9 +51203,30 @@
 </tr>
 
 <tr>
+<td>Valiant</td>
+<td>2014</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Valiant Comics</td>
 <td>1989</td>
 <td>Publisher</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Valiant High</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Valiant Universe Handbook</td>
+<td>2015</td>
+<td>Valiant</td>
 <td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
@@ -51004,6 +51669,13 @@
 <td>1987</td>
 <td>Marvel</td>
 <td><a href="Visionaries/Visionaries.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Visitor</td>
+<td>2019</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51487,6 +52159,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="WarMan/WarMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>War Mother</td>
+<td>2017</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53170,6 +53849,13 @@
 </tr>
 
 <tr>
+<td>Wrath Of The Eternal Warrior</td>
+<td>2015</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Writing For Comics</td>
 <td>2003</td>
 <td>Avatar</td>
@@ -53377,6 +54063,13 @@
 <td>1982</td>
 <td>Marvel</td>
 <td><a href="XmenTeenTitans/xmenteentitans.html">Details</a></td>
+</tr>
+
+<tr>
+<td>X-O Manowar</td>
+<td>2012</td>
+<td>Valiant</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
