--- a/Dell/Dell.html
+++ b/Dell/Dell.html
@@ -158,7 +158,7 @@ Titles
 <li><a href="WaltDisneysComics/WaltDisneysComics.html">Walt Disney's Comics and Stories</a> (1940)
 <li><a href="Dell59.jpg">Walt Disney's Uncle Scrooge</a> (1953)
 <li><a href="Dell60.jpg">Walter Lantz New Funnies</a> (1946)
-<li><a href="WarComics/WarComics.html">War Comics</a> (1940)
+<li><a href="../WarComics/WarComics.html">War Comics</a> (1940)
 <li><a href="Dell61.jpg">Werewolf</a> (1966)
 <li><a href="Dell63.jpg">Yak Yak</a> (1960)
 <li><a href="Dell62.jpg">Zane Grey's Stories of the West</a> (1955)
