--- a/ArchieComics/ArchieComics.html
+++ b/ArchieComics/ArchieComics.html
@@ -18,7 +18,71 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Archie1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Archie/Archie1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../BlueRibbon/BlueRibbon1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ChillingAdventuresInSorcery/CAIS01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Sabrina/Sabrina1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Sabrina/Sabrina1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TopNotch/TopNotch1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ArchieComics59.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -30,141 +94,72 @@ The company began in 1939 as MLJ Comics (Maurice Coyne, Louis Silberkleit, John 
 </p><p>
 Archie Comics was also the title of the company's longest-running publication, the first issue appearing with a cover date of Winter 1942. Starting with issue #70, the title was shortened to simply Archie. The flagship series was relaunched from issue #1 in July 2015 with a new look and design suited for a new generation of readers.Archie Comics characters and concepts have also appeared in numerous films, television programs, cartoons, and video games. 
 </p><p>
+<li><a href="ArchieComics1.jpg">Adventures of Bayou Billy</a>   (1989)
+<li><a href="ArchieComics2.jpg">Adventures of Kool-Aid Man</a>  (1987)
+<li><a href="ArchieComics3.jpg">Adventures of Little Archie</a>  (1961)
+<li><a href="ArchieComics4.jpg">Adventures of the Dover Boys</a>  (1950)
+<li><a href="ArchieComics5.jpg">Adventures of the Fly</a> (1960)
+<li><a href="ArchieComics6.jpg">Adventures of the Jaguar</a> (1961)
+<li><a href="ArchieComics7.jpg">Adventures of Young Dr. Masters</a> (1964)
+<li><a href="ArchieComics8.jpg">Afterlife with Archie</a> (2013)
+<li><a href="ArchieComics9.jpg">Afterlife with Archie Magazine</a> (2013)
+<li><a href="ArchieComics10.jpg">America's 1st Patriotic Comic Book Hero, The Shield</a> (2002)
 <li><a href="../Archie/Archie.html">Archie</a> (1942)
-<li>Archie's Christmas Stocking    (1993)
-<li>Archie's Double Digest Quarterly Magazine (1982)
-<li>Archie's Explorers of the Unknown! (1990)
-<li>Archie's Funhouse Double Digest  (2014)
-<li>Archie's Girls Betty and Veronica  (1950)
-<li>Archie's Holiday Fun Digest  (1997)
-<li>Archie's Jokebook Magazine  (1953)
-<li>Archie Jumbo Comics 75th Anniversary  (2016)
-<li>Archie Jumbo Comics Digest (1984)
-<li>Archie's Madhouse  (1959)
-<li>Archie Meets Ramones  (2016)
-<li>Archie Milestones Digest (2019)
-<li>Archie's Mysteries  (2003)
-<li>Archie's Pal Jughead (1949)
-<li>Archie's TV Laugh-Out  (1969)
-<li>Archie's Weird Mysteries  (2000)
-<li>Archie Digest (1973)
-<li>Archie All Canadian Digest (1996)
-<li>Archie Americana Series  (1995)
-<li>Archie Annual Digest    #27–69  1975–1998 
-<li>Archie &amp; Friends    #1–159  1992 – 2019
-<li>Archie &amp; Friends Double Digest  #1–33   Feb. 2011 – Jan 2014 
-<li>Archie and Me   #1–161  Oct. 1964 – Feb. 1987 
-<li>Archie and Me Jumbo Comics Digest   #1–Present  2017 – 2019
-<li>Archie... Archie Andrews, Where Are You? Digest     #1–114  Feb. 1977 – May 1998 
-<li>Archie at Riverdale High    #1–113  Aug. 1972 – Feb. 1987 
-<li>Archie Giant Series     #1– 632     Dec. 1954 – 1992 
-<li>Archie Meets the Punisher   #1  August 1994 
-<li>Archie Meets Batman of 1966     #1-6    August 2018-2019 
-<li>Archie 1941     #1-5    October 2018-February 2019 
-<li>Archie 3000!    #1–16   May 1989 – July 1991 
-<li>Archie vs. Predator     #1–4    April – July 2015 
-<li>Archie vs. Predator II  #1–5    July 2019 – January 2020 
-<li>Archie vs. Sharknado    #1  July 2015 
-<li>Archie and Katy Keene   #1  January 2020 
-<li>Archie Meets Glee   #1–4    2013
-<li>B &amp; V Friends Jumbo Comics Digest   #209–current    Jan. 2011 – present 
-<li>Betty and Me    #1–200  Aug. 1965 – Aug. 1992 
-<li>Betty And Veronica: Friends forever     #1-current  May 2018- present 
-<li>Betty and Veronica Summer Fun  (1994)
-<li>Betty's Diary   #1–40   April 1986 – April 1990 
-<li>Betty   #1–195  Sept. 1992 – Jan. 2012 
-<li>Betty &amp; Veronica    #1–278  1987 – 2019 
-<li>Betty and Veronica Digest Magazine  #1–208  Nov. 1980 – Oct. 2010 
-<li>Betty and Veronica Jumbo Comics Digest      1987 – 2019
-<li>Betty and Veronica Spectacular  #1–90   Oct. 1992 – July 2009 
-<li>Betty and Veronica Vixens   #1-10   2017- 2018 
-<li>Blossoms 666 (2019)
+<li><a href="ArchieComics11.jpg">Archie &amp; Friends</a> (2002)
+<li><a href="ArchieComics12.jpg">Archie 1000 Page Comics 75th Anniversary Bash</a> (2016)
+<li><a href="ArchieComics13.jpg">Betty And Me</a> (1965)
+<li><a href="ArchieComics14.jpg">Betty And Veronica</a> (1987)
+<li><a href="ArchieComics15.jpg">Black Hood</a> (1943)
+<li><a href="ArchieComics16.jpg">Black Swan</a> (1945)
 <li><a href="../BlueRibbon/BlueRibbon.html">Blue Ribbon Comics</a> (1939)
-<li>Blue Ribbon Comics (1983) 
-<li>Captain Hero Comics Digest Magazine (1981)
-<li>Carneys (1994)
-<li>Cartoon Network Christmas Spectacular (1997)
-<li>Cheryl Blossom (1997)
-<li>Comet (1983)
-<li>Conservation Corps (1993)
-<li>Cosmo the Merry Martian (1958)
+<li><a href="ArchieComics17.jpg">Captain Hero</a> (1983)
+<li><a href="ArchieComics18.jpg">Cheryl Blossom</a> (1995)
 <li><a href="../ChillingAdventuresInSorcery/ChillingAdventuresInSorcery.html">Chilling Adventures in Sorcery</a> (1972)
 <li><a href="../Sabrina/Sabrina.html">Chilling Adventures of Sabrina</a> (2014)
-<li>Darling Love (1949)
-<li>Darling Romance (1949)
-<li>Dilton's Strange Science (1989)
-<li>Double Life of Private Strong (1959)
-<li>Double Sized Commemorative Issue Life with Archie (2010)
-<li>Everything's Archie (1969) 
-<li>Explorers of the Unknown (1990)
-<li>Faculty Funnies 1989    5 issues (5 indexed)    Have 11 (Need 1)    June 1989 - May 1990
-<li>Fauntleroy Comics [Super Duck Presents]     1950    3 issues (3 indexed)    Gallery     1950 - 1952
-<li>Flintstones     1995    22 issues (12 indexed)  Gallery     September 1995 - June 1997
-<li>Fly (1959)
-<li>Fly Man (1965)
-<li>Fox (2013)
-<li>Free Comic Book Day (2012)
-<li>Free Weekly Comic Magazine (1940)
-<li>Ginger (1951)
-<li>Harley &amp; Ivy Meet Betty &amp; Veronica  #1-6    2017 - 2018 
-<li>Jackpot Comics  #1–9    Spring 1941 – Spring 1943 
-<li>Jolly Jingles   #10–16  1943 – 1945 
-<li>Josie and the Pussycats     #1–106  Feb. 1963 – Oct. 1982 
-<li>Jughead     #127–397    1965 – 2016
-<li>Jughead's Diner     #1–7    April 1990 – April 1991 
-<li>Jughead's Folly     #1  1957
-<li>Jughead's Jokes     #1–78   Aug. 1967 – Sept. 1982 
-<li>Jughead's Pal Hot Dog   #1–5    Jan. – Oct. 1990 
-<li>Jughead's Time Police   #1–6    July 1990 – May 1991 
-<li>The Jughead Jones Digest Magazine   #1–100  June 1977 – May 1996 
-<li>Jughead's Double Digest     #1–200  Oct. 1989 – Apr. 2014 
-<li>Jughead and Archie Double Digest    #1–27   June 2014 – Sept. 2017 
-<li>Jughead and Friends Digest  #1–38   June 2005 – July 2010 
-<li>Jughead with Archie Digest  #1–200  July 1974 – May 2005 
-<li>Jughead: The Hunger     #1–13   October 2017 – 2018 
-<li>Katy Keene  #7–33   Dec. 1984 – Jan. 1990 
-<li>Kevin Keller    #1–15   Feb. 2012 – Nov. 2014 
-<li>Knuckles the Echidna (comics)   #1–32   Apr. 1997 – Feb. 2000 
-<li>Li'l Jinx   #11–16  Nov. 1956 – Sept. 1957 
-<li>Little Archie   #1–180  1956 – Feb. 1983 
-<li>Little Archie in Animal Land    #1-19   1957-1958 
-<li>Little Archie Mystery   #1–2    Aug. – Oct. 1963 
-<li>Laugh Comics    #20–400     Fall 1946 – 1991
-<li>Laugh Comix     #46–48  1944 – 1945 
-<li>Laugh Comics Digest     #1–200  Aug. 1974 – April 2005 
-<li>Life with Archie    #1–286  Sept. 1958 – July 1991 
-<li>Life with Archie: The Married Life  #1–37   July 2010 – Sept 2014 
-<li>Mad House Ma-ad     #67–72  June 1968 – Jan. 1969 
-<li>Mad House Glads     #73–94  May 1972 – Aug. 1974 
-<li>ManTech Robot Warriors  #1–4    Sept. 1984 – May. 1985 
-<li>Mega Man (Archie Comics)    #1–55   2011 – 2015
-<li>Mighty Mutanimals   #1–9    May 1991 – 1993 
-<li>The New Archies Digest Magazine     #1–22   Oct. 1987 – May 1990 
-<li>Pep Comics  #1–411  Jan. 1940 – March 1987 
-<li>Reggie and Me   #1–126  1950 – 1980 
-<li>Reggie's (Wise Guy) Jokes   #1–55   Aug. 1968 – Sept. 1980 
-<li>Reggie's Revenge    #1–3    Spring 1994 – Spring 1995 
-<li>Riverdale   #1-5    2017-2018 
-<li>Riverdale Season 3  #1-present  2019-present 
-<li>Riverdale Digest    #1-7    Jan. 2017 – ? 
-<li>Riverdale High  #1–6    Aug. 1990 – June 1991 
-<li><a href="../Sabrina/Sabrina.html">Sabrina the Teenage Witch</a> #1–77   1971 – 2019
-<li>Sonic Boom  #1–11   Oct. 2014 – Sep. 2015 
-<li>Sonic the Hedgehog  #1–290  1992 – 2016 
-<li>Sonic Universe  #1–94   Feb. 2009 – Jan. 2017 
-<li>Sonic X     #1–40   Sep. 2005 – Jan. 2009 
-<li>Suzie Comics    #41–100     Spring 1945 – Aug. 1954 
-<li>Tales from Riverdale Digest     #1–39   July 2005 – Aug. 2010 
-<li>Teenage Mutant Ninja Turtles Adventures     #1–72   Aug. 1988 – Oct. 1995
-<li>That Wilkin Boy     #1–52   Jan. 1969 – Oct. 1982
-<li>TMNT Mutant Universe Sourcebook (1992)
+<li><a href="ArchieComics19.jpg">Comet</a> (1983)
+<li><a href="ArchieComics20.jpg">Conservation Corps</a> (1993)
+<li><a href="ArchieComics21.jpg">Cosmo</a> (2018)
+<li><a href="ArchieComics22.jpg">Darling Love</a> (1949)
+<li><a href="ArchieComics23.jpg">Darling Romance</a> (1949)
+<li><a href="ArchieComics24.jpg">Dilton's Strange Science</a> (1989)
+<li><a href="ArchieComics25.jpg">Double Life Of Private Strong</a> (1959)
+<li><a href="ArchieComics26.jpg">Explorers Of The Unknown</a> (1990)
+<li><a href="ArchieComics27.jpg">Faculty Funnies</a> (1989)
+<li><a href="ArchieComics28.jpg">Fauntleroy Comics</a> (1950)
+<li><a href="ArchieComics29.jpg">Flintstones</a> (1995)
+<li><a href="ArchieComics30.jpg">Fly Man</a> (1965)
+<li><a href="ArchieComics31.jpg">Fox</a> (2013)
+<li><a href="ArchieComics32.jpg">Ginger</a> (1951)
+<li><a href="ArchieComics33.jpg">Hangman</a> (2017)
+<li><a href="ArchieComics34.jpg">Jackpot</a> (1941)
+<li><a href="ArchieComics35.jpg">Jinx</a> (2012)
+<li><a href="ArchieComics36.jpg">Jokebook</a> (1977)
+<li><a href="ArchieComics37.jpg">Jolly Jingles</a> (1943)
+<li><a href="ArchieComics38.jpg">Josie And The Pussycats</a> (1969)
+<li><a href="ArchieComics39.jpg">Jughead</a> (1965)
+<li><a href="ArchieComics40.jpg">Katy Keene</a> (1949)
+<li><a href="ArchieComics41.jpg">Laugh</a> (1946)
+<li><a href="ArchieComics42.jpg">Mantech Robot Warriors</a> (1984)
+<li><a href="ArchieComics43.jpg">Mega Man</a> (2011)
+<li><a href="ArchieComics44.jpg">Mighty Comics</a> (1966)
+<li><a href="ArchieComics45.jpg">Mighty Crusaders</a> (1965)
+<li><a href="ArchieComics46.jpg">Mighty Mutanimals</a> (1991)
+<li><a href="ArchieComics47.jpg">More Seymour</a> (1963)
+<li><a href="ArchieComics48.jpg">Pat The Brat</a> (1955)
+<li><a href="ArchieComics49.jpg">Pep</a> (1940)
+<li><a href="ArchieComics50.jpg">Red Circle Sorcery</a> (1974)
+<li><a href="ArchieComics51.jpg">Riverdale</a> (2017)
+<li><a href="ArchieComics52.jpg">Sabrina</a> (2000)
+<li><a href="../Sabrina/Sabrina.html">Sabrina the Teenage Witch</a> (1971)
+<li><a href="ArchieComics53.jpg">Sam Hill Private Eye</a> (1950)
+<li><a href="ArchieComics54.jpg">Shadow</a> (1964)
+<li><a href="ArchieComics55.jpg">Teenage Mutant Ninja Turtles Adventures</a> (1988)
 <li><a href="../TopNotch/TopNotch.html">Top Notch</a>
-<li>Veronica    #1–210  April 1989 – Dec. 2011 
-<li>Wilbur Comics   #1–90   Summer 1944 – Oct. 1965 
-<li>World of Archie     #1–22   Aug. 1992 – March 1997 
-<li>World of Archie Jumbo Comics Digest     #1–current  Oct. 2010 – present 
-<li>Your Pal Archie     #1-3    2017
-<li>Zip Comics (1940)
+<li><a href="ArchieComics56.jpg">Vamperonica</a> (2018)
+<li><a href="ArchieComics57.jpg">Veronica</a> (1989)
+<li><a href="ArchieComics58.jpg">Wilber</a> (1944)
+<li><a href="ArchieComics59.jpg">Zip</a> (1940)
+
 </p>
 
 </body>
